# local-ai-powered-chatbot

./: .env.example  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  streamlit_app.py
